# 2decomp-fft

./: CMakeLists.txt  INSTALL.sh  INSTALL_MPI.sh  INSTALL_NVIDIA_24_1_OPENACC_CUDA.sh
cmake/: D2D_Compilers.cmake  decomp2d_cpu-config.cmake.in  decomp2d_gpu-config.cmake.in
cmake/compilers/: D2D_flags_nvidia.cmake
examples/: CMakeLists.txt
examples/mpi_cpu/: CMakeLists.txt
examples/mpi_cpu/fft_multiple_grids/: CMakeLists.txt  fft_multiple_grids.f90  fft_multiple_grids_inplace.f90  fft_multiple_grids_no_obj.f90  fft_multiple_grids_utilities.f90
examples/mpi_cpu/fft_physical_x/: CMakeLists.txt  fft_c2c_x.f90  fft_c2c_x_skip.f90  fft_grid_x.f90  fft_r2c_x.f90  fft_r2c_x_skip.f90  fft_r2c_x_skip_errorMsg.f90
examples/mpi_cpu/fft_physical_z/: CMakeLists.txt  fft_c2c_z.f90  fft_c2c_z_skip.f90  fft_r2c_z.f90  fft_r2c_z_skip.f90  fft_r2c_z_skip_errorMsg.f90
examples/mpi_cpu/grad3d/: CMakeLists.txt  grad3d.f90
examples/mpi_cpu/halo_test/: CMakeLists.txt  halo_test.f90
examples/mpi_cpu/init_test/: CMakeLists.txt  init_test.f90
examples/mpi_cpu/io_adios/: CMakeLists.txt  io_bench.f90  io_plane_test.f90  io_read.f90  io_test.f90  io_tmp_test.f90
examples/mpi_cpu/io_mpi/: CMakeLists.txt  io_bench.f90  io_mpi_non_blocking.f90  io_plane_test.f90  io_read.f90  io_test.f90  io_var_test.f90
examples/mpi_cpu/test2d/: CMakeLists.txt  test2d.f90  timing2d_complex.f90  timing2d_real.f90
examples/mpi_gpu/: CMakeLists.txt
examples/mpi_gpu/fft_multiple_grids/: CMakeLists.txt  fft_multiple_grids.f90  fft_multiple_grids_inplace.f90  fft_multiple_grids_no_obj.f90  fft_multiple_grids_utilities.f90
examples/mpi_gpu/fft_physical_x/: CMakeLists.txt
examples/mpi_gpu/fft_physical_z/: CMakeLists.txt  fft_c2c_z.f90  fft_c2c_z_skip.f90  fft_r2c_z.f90  fft_r2c_z_skip.f90  fft_r2c_z_skip_errorMsg.f90
examples/mpi_gpu/grad3d/: CMakeLists.txt  grad3d.f90
examples/mpi_gpu/halo_test/: CMakeLists.txt  halo_test.f90
examples/mpi_gpu/init_test/: CMakeLists.txt  init_test.f90
examples/mpi_gpu/io_adios/: CMakeLists.txt  io_bench.f90  io_plane_test.f90  io_read.f90  io_test.f90  io_tmp_test.f90
examples/mpi_gpu/io_mpi/: CMakeLists.txt  io_bench.f90  io_mpi_non_blocking.f90  io_plane_test.f90  io_read.f90  io_test.f90  io_var_test.f90
examples/mpi_gpu/test2d/: CMakeLists.txt  test2d.f90  timing2d_complex.f90  timing2d_real.f90
src/: CMakeLists.txt
src/mpi_cpu/: CMakeLists.txt  decomp_2d.f90  decomp_2d_init_fin.f90  decomp_2d_mpi.f90  log.f90  postpro.f90  transpose_x_to_y.f90  transpose_y_to_x.f90  transpose_y_to_z.f90  transpose_z_to_y.f90
src/mpi_gpu/: CMakeLists.txt  decomp_2d.f90  decomp_2d_constants.f90  decomp_2d_cumpi.f90  decomp_2d_init_fin.f90  halo.f90  log.f90  transpose_x_to_y.f90  transpose_y_to_x.f90  transpose_y_to_z.f90  transpose_z_to_y.f90
