if (BUILD_TARGET MATCHES "mpi_cpu")
  add_subdirectory(mpi_cpu)
  set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/examples/mpi_cpu/cmake")
endif (BUILD_TARGET MATCHES "mpi_cpu")

if (BUILD_TARGET MATCHES "mpi_gpu")
  add_subdirectory(mpi_gpu)
  if (ENABLE_OPENACC)
    set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/examples/mpi_gpu/cmake")
  endif (ENABLE_OPENACC)
  if (ENABLE_OPENMP)
    set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/examples/mpi_gpu/cmake")
  endif (ENABLE_OPENMP)
endif (BUILD_TARGET MATCHES "mpi_gpu")
